Update experiment pages to use new API structure and assets
Replaced outdated URLs, scripts, and stylesheets with updated versions. Adjusted data structures and endpoints to align with the new API setup for enhanced functionality. Removed redundant CSS and ensured compliance with current standards.

--- a/html/E-PROT-39.html
+++ b/html/E-PROT-39.html
@@ -157,13 +157,13 @@
           }, {
             "type": "resources",
             "name": "Resources",
-            "props": {"url": "http://www-test.ebi.ac.uk/gxa/json/experiments/E-PROT-1/resources/SUPPLEMENTARY_INFORMATION"}
+            "props": {"url": "json/experiments/E-PROT-1/resources/SUPPLEMENTARY_INFORMATION"}
           }]
         }
       }, {
         "type": "resources",
         "name": "Downloads",
-        "props": {"url": "http://www-test.ebi.ac.uk/gxa/json/experiments/E-PROT-1/resources/DATA"}
+        "props": {"url": "json/experiments/E-PROT-1/resources/DATA"}
       }]
     },
     target: "experiment-page"
