Add an index page to the Expression Atlas experiment page demo
Replaced placeholder file with a fully structured HTML document. Includes links to experiment demos, EBI stylesheets, and custom styles for improved presentation.

--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,56 @@
-E-PROT-1.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Expression Atlas Experiment Demo</title>
+    <link rel="stylesheet" href="https://ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.3/css/ebi-global.css"
+          type="text/css" media="all"/>
+    <link rel="stylesheet" href="https://ebi.emblstatic.net/web_guidelines/EBI-Icon-fonts/v1.3/fonts.css"
+          type="text/css" media="all"/>
+    <link rel="stylesheet" href="https://www.ebi.ac.uk/gxa/resources/css/customized-bootstrap-3.3.5.css">
+    <style>
+        .container {
+            margin: 20px auto;
+            max-width: 800px;
+            padding: 20px;
+        }
+        h1 {
+            margin-bottom: 30px;
+            color: #207a7a;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 10px;
+            padding: 10px;
+            background-color: #f5f5f5;
+            border-radius: 5px;
+        }
+        a {
+            color: #207a7a;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Demo for the experiment page of Expression Atlas</h1>
+        <p>Click on any of the links below to view the experiment demo:</p>
+        <ul>
+            <li><a href="E-GEOD-48549.html">E-GEOD-48549</a> - Experiment demo</li>
+            <li><a href="E-GEOD-54705.html">E-GEOD-54705</a> - Experiment demo</li>
+            <li><a href="E-MTAB-2770.html">E-MTAB-2770</a> - Experiment demo</li>
+            <li><a href="E-MTAB-2836.html">E-MTAB-2836</a> - Experiment demo</li>
+            <li><a href="E-MTAB-513.html">E-MTAB-513</a> - Experiment demo</li>
+            <li><a href="E-PROT-1.html">E-PROT-1</a> - Experiment demo</li>
+            <li><a href="E-PROT-39.html">E-PROT-39</a> - Experiment demo</li>
+        </ul>
+    </div>
+</body>
+</html>
